--- a/src/main/resources/templates/user/loginForm.html
+++ b/src/main/resources/templates/user/loginForm.html
@@ -5,111 +5,107 @@
       layout:decorate="~{layout}">
 <head>
     <title>로그인</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="assets/css/bootstrap-responsive.css" rel="stylesheet">
 </head>
 <div layout:fragment="content">
     <form class="mx-auto" action="/user/login.do" method="post" style="width: 450px;">
-        <img src="/public/img/logo.png" alt="" width="350px" height="120px" style="margin-left: 20%; margin-top: 20%">
-        <div style="border: 1px solid lightgray; width: 600px; height: 300px; position: absolute;
-        margin-left: -2%; margin-top: 0.5%; border-radius: 3%;">
-            <p class="form-floating">
-                <input type="text" name="userId" value="" class="form-control" placeholder="아이디"
-                       style="width: 500px; margin-left: 7.5%; margin-top: 13%">
-                <label style=" margin-left: 7.5%; opacity:20%" class="bi bi-person">      아이디</label>
-            </p>
-            <p class="form-floating">
-                <input type="password" name="pw" value="" class="form-control" placeholder="아이디"
-                       style="width: 500px; margin-left: 7.5%; margin-top: -1.5%">
-                <label style=" margin-left: 7.5%; opacity: 20%" class="bi bi-lock">        패스워드</label>
-            </p>
-            <p class="form-check">
-                <input type="checkbox" value="1" name="autoLogin" id="autoLogin" class="form-check-input" style="margin-left: 4%;">
-                <label for="autoLogin" class="form-check-label" style="margin-left: 2%;">
-                    로그인 상태 유지
-                </label>
-            </p>
-        </div>
-        <p class="text-end">
-            <button class="btn btn-primary" style="position: absolute; margin-left: -20%; margin-top: 19%;
-            width: 20%; height: 5%; background: #FFE3A9; color: #FF5D5D; border: none">
-                <span style="font-size: 22px; font-weight: 800;">로그인</span>
-            </button>
-        </p>
-        <p class="text-end" style="margin-top: 88%;margin-right: 8%">
-            <span type="button" style="opacity: 30%; font-size: 18px">
-                비밀번호 찾기 |
-            </span>
-            <span type="button" style="opacity: 30%; font-size: 18px">
-                아이디 찾기 |
-            </span>
-            <span type="button" style="opacity: 30%; font-size: 18px">
-                회원가입
-            </span>
-        </p>
-
-        <div class="container">
-            <h1>Naver Login API 사용하기</h1>
-            <div class="login-area">
-                <div id="message">
-                    로그인 버튼을 눌러 로그인 해주세요.
-                </div>
-                <div id="button_area">
-                    <div id="naverIdLogin"></div>
+        <img src="/public/img/black_chap.png" alt="" class="image_logo img-responsive center-block"/>
+        <!--외부 박스-->
+        <div class="container-sm box d-flex justify-content-center">
+            <!--아이디 박스-->
+            <div class="form-outline box_login">
+                <input type="text" id="form3Example3" class="form-control form-control-lg"
+                       placeholder="아이디" name="userId" value=""/>
+                <label class="form-label" for="form3Example3"></label>
+            </div>
+            <!--비밀번호 박스-->
+            <div class="form-outline fixed-bottom box_pw container-sm">
+                <input type="password" id="form3Example4" class="form-control form-control-lg"
+                       placeholder="비밀번호" name="pw" value=""/>
+                <label class="form-label" for="form3Example4"></label>
+            </div>
+            <div class="fixed-bottom box_check container-sm">
+                <!-- Checkbox -->
+                <div class="form-check mb-0">
+                    <input class="form-check-input me-2" type="checkbox" value="1" id="autoLogin" />
+                    <label class="form-check-label" for="autoLogin">
+                        로그인 상태 유지
+                    </label>
                 </div>
             </div>
         </div>
-    </form>
+            <div class="form-outline row" >
+                <button type="button" class="button_login btn btn-lg float-end">로그인</button>
+            </div>
+        <p class="text-end container-sm login_list d-flex justify-content-center">
+            <button style="opacity: 30%; font-size: 18px" class="list">
+                비밀번호 찾기 |
+            </button>
+            <button style="opacity: 30%; font-size: 18px" class="list">
+                아이디 찾기 |
+            </button>
+            <button style="opacity: 30%; font-size: 18px" class="list" href="/user/signup.do">
+                회원가입
+            </button>
+        </p>
 
-    <script src="https://static.nid.naver.com/js/naveridlogin_js_sdk_2.0.2.js" charset="utf-8"></script>
-    <script type="text/javascript">
-
-        const naverLogin = new naver.LoginWithNaverId(
-            {
-                clientId: "NfuiqEV4HltgQ4mfdiO6",
-                callbackUrl: "http://127.0.0.1:5500",
-                loginButton: {color: "green", type: 2, height: 40}
-            }
-        );
-
-
-        naverLogin.init();
-        naverLogin.getLoginStatus(function (status) {
-            if (status) {
-                const nickName=naverLogin.user.getNickName();
-                const age=naverLogin.user.getAge();
-                const birthday=naverLogin.user.getBirthday();
-
-                if(nickName===null||nickName===undefined ){
-                    alert("별명이 필요합니다. 정보제공을 동의해주세요.");
-                    naverLogin.reprompt();
-                    return ;
-                }else{
-                    setLoginStatus();
-                }
-            }
-        });
-        console.log(naverLogin);
-
-        function setLoginStatus(){
-
-            const message_area=document.getElementById('message');
-            message_area.innerHTML=`
-      <h3> Login 성공 </h3>
-      <div>user Nickname : ${naverLogin.user.nickname}</div>
-      <div>user Age(범위) : ${naverLogin.user.age}</div>
-      <div>user Birthday : ${naverLogin.user.birthday}</div>
-      `;
-
-            const button_area=document.getElementById('button_area');
-            button_area.innerHTML="<button id='btn_logout'>로그아웃</button>";
-
-            const logout=document.getElementById('btn_logout');
-            logout.addEventListener('click',(e)=>{
-                naverLogin.logout();
-                location.replace("http://127.0.0.1:5500");
-            })
-        }
-
-
-    </script>
-</div>
+        </form>
+    </div>
 </html>
+
+<style>
+    .box {
+        border: solid 1.5px lightgray;
+        width: 40rem;
+        height: 15rem;
+        border-radius: 5%;
+        /*화면 가운데 오게 하기*/
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 1;
+    }
+
+    .box_login {
+        width: 30rem;
+        margin-top: 4rem;
+    }
+    .box_pw{
+        width: 31.5rem;
+        margin-bottom: 3rem;
+    }
+
+    .box_check {
+        margin-left: 4.5rem;
+        margin-bottom: 2.5rem;
+    }
+    .button_login{
+        background-color: #FFDD98;
+        color: #FF8C8C;
+        width: 30rem;
+        height: 3rem;
+        /*margin-bottom: 17rem;*/
+        position :fixed;
+        bottom: 30%;
+    }
+    .button_login:hover{
+        background-color:#FFE7B6;
+        color: #FFA4A4;
+    }
+    .login_list {
+        position: fixed;
+        bottom: 23%;
+        right: 12%;
+    }
+    .list {
+        background: #FFFAED;
+        border: none;
+    }
+    .image_logo{
+        width: 30rem;
+        position: absolute;
+        bottom: 65%;
+    }
+</style>
