--- a/src/main/resources/templates/user/detail.html
+++ b/src/main/resources/templates/user/detail.html
@@ -6,45 +6,57 @@
 <head>
     <meta charset="UTF-8">
     <title>유저 상세 페이지</title>
+    <link rel="stylesheet" href="/csstest/userDetailCss.css">
 </head>
+
 <div layout:fragment="content" >
     <!--비동기 정보 섹션-->
     <div>
-        <section>
-
-        <!--
-       유저 좌측 정보
-       1. 프로필 사진
-       2. 닉네임
-       3. 팔로우 버튼
-   -->
-        <div>
+<!--        유저 카드 부분-->
+        <section class="userCard-container">
+<!--유저 카드 좌측-->
+        <div class="userCard-left">
             <!--이미지 틀-->
-            <div th:if="${user.getProfileImg!=null}">
-                <!--이미지가 존재할 경우-->
-                <img th:src="@{'{path}'(path=${user.getProfileImg})}" class="img-thumbnail" alt="이미지">
+<!--            <br>-->
+            <div class="img-containerbox" th:if="${user.getProfileImg!=null}">
+                <img th:src="@{'{path}'(path=${user.getProfileImg})}" class="profileimg" alt="이미지">
             </div>
-            <div th:if="${user.getProfileImg==null}">
-                <img src="/public/icon/usericon.png" alt="기본 아이콘">
-                <!--
-                <i class="fa-solid fa-user"></i>
-                -->
+            <div class="img-containerbox" th:if="${user.getProfileImg==null}">
+                <img src="/public/icon/usericon.png" class="profileimg" alt="기본 아이콘">
             </div>
-            <!--나머지 틀-->
-            <div>
-                <p th:text="${user.nickname}">
-
-                </p>
-                <button>팔로우+</button>
+            <div class="text-and-button-containerbox">
+                <p th:text="${user.nickname}" style="
+                        text-align: center;
+                        font-weight: bold;
+                        font-size: large;
+                        margin-top: 5px;
+                "></p>
+<!--                버튼 변환-->
+                <th:block th:if="${session.loginUser.userId.equals(user.userId)}">
+                    <a class="profilebutton" th:href="@{'/user/{userId}/modify.do'(userId=${user.userId})}">수정페이지</a>
+<!--                    <br>-->
+                </th:block>
+                <th:block th:if="${session.loginUser.userId!=user.userId}">
+                    <p class="profilebutton">
+                        <a class="profilebutton">팔로우</a>
+                    </p>
+                </th:block>
             </div>
 
         </div>
-        <div style="border: 1px solid black;">
-            <p>팔로워</p>
-            <p>팔로잉</p>
+        <div class="userCard-right">
+            <div class="followbox">
+                <span style="background-color: #61b977">팔로워</span>
+                <span>팔로잉</span>
+            </div>
+
             <p th:text="${user.introduce}"></p>
-            <div>뱃지</div>
-            <ul>
+
+            <div class="user-badgebox">
+                뱃지
+            </div>
+
+            <ul style="border : 1px solid black;">
                 <li>
                     <a href="">페이스븍</a>
                     <a href=""></a>
@@ -66,8 +78,8 @@
                     <a href=""></a>
                 </li>
             </ul>
-        </div>
 
+        </div>
         </section>
 
         <section style="border: 1px solid black;">
