--- a/src/main/resources/templates/user/modify.html
+++ b/src/main/resources/templates/user/modify.html
@@ -5,46 +5,120 @@
     <title>회원수정 폼</title>
 </head>
 <div layout:fragment="content">
-    <form name="signupForm" action="/user/modify.do" method="post" style="width: 500px;margin: 0 auto;">
-        <h1 class="my-4">회원수정</h1>
-        <p class="form-floating">
-            <input th:value="${user.userId}" readonly id="userIdInput" type="text" name="userId" class="form-control" placeholder="??">
-            <label class="">아이디</label>
-        </p>
-        <p class="form-floating">
-            <input th:value="${user.nickname}" type="text" name="nickname" class="form-control" placeholder="??">
-            <label>닉네임</label>
-        </p>
-        <p class="form-floating">
-            <input th:value="${user.pw}" type="password" name="pw" class="form-control" placeholder="??">
-            <label>패스워드</label>
-        </p>
+    <form name="signupForm" action="/user/modify.do" method="post" style="width: 800px;margin: 0 auto;border: 1px solid black;">
+
+        <div class="card" style="width: 18rem;">
+            <img src="user.profileImg" alt="프로필 이미지" class="card-img-top">
+            <div class="card-body">
+                <p class="card-text">회원수정</p>
+            </div>
+
+        </div>
 
 
-        <p class="form-floating">
-            <input th:value="${user.email}" type="text" name="email" class="form-control" placeholder="??">
 
-            <label>이메일</label>
-        </p>
-        <p class="form-floating">
-            <input th:value="${user.birth}" type="date" name="birth" class="form-control" placeholder="??">
-            <label>생일</label>
-        </p>
-        <p class="form-floating">
-            <select name="gender" class="form-control">
-                <option value="MALE" th:selected="${#strings.equals(user.gender,'MALE')}">남자</option>
-                <option value="FEMALE" th:selected="${#strings.equals(user.gender,'FEMALE')}">여자</option>
-            </select>
-            <label>성별</label>
-        </p>
-        <p class="form-floating">
-            <input th:value="${user.address}" type="text" name="address"  class="form-control" placeholder="??">
-            <label>주소</label>
-        </p>
-        <p class="form-floating">
-            <input th:value="${user.detailAddress}" type="text" name="detailAddress"  class="form-control" placeholder="??">
-            <label>주소상세</label>
-        </p>
+
+<!--        아이디 readOnly-->
+        <div class="my-3 row">
+            <label for="UserId" class="col-sm-2 col-form-label">아이디</label>
+            <div class="col-sm-10">
+                <input type="text" readonly class="form-control-plaintext" id="UserId" th:value="${user.userId}"
+                style="border: 1px solid gray;">
+            </div>
+        </div>
+<!--닉네임 정보-->
+        <div class="my-3 row">
+            <label for="UserNickName" class="col-sm-2 col-form-label">닉네임</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control-plaintext" id="UserNickName" th:value="${user.nickname}"
+                       style="border: 1px solid gray;">
+            </div>
+        </div>
+<!--뱃지 정보-->
+        <div class="my-3 row">
+            <label for="UserGrade" class="col-sm-2 col-form-label">뱃지</label>
+            <div class="col-sm-10">
+                <input type="text" readonly class="form-control-plaintext" id="UserGrade" value="..."
+                       style="border: 1px solid gray;">
+            </div>
+        </div>
+<!--인스타 수정-->
+        <div class="my-3 row">
+            <label for="UserInsta" class="col-sm-2 col-form-label"
+                   >인스타그램</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control-plaintext" id="UserInsta" th:value="${user.instaUrl}"
+                       style="border: 1px solid gray;">
+            </div>
+        </div>
+<!--페이스북 수정-->
+        <div class="my-3 row">
+            <label for="UserFace" class="col-sm-2 col-form-label" >페이스북</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control-plaintext" id="UserFace" th:value="${user.faceUrl}"
+                       style="border: 1px solid gray;">
+            </div>
+        </div>
+<!--찹스토리 링크(readonly)-->
+        <div class="my-3 row">
+            <label for="UserChapStory" class="col-sm-2 col-form-label" >찹스토리</label>
+            <div class="col-sm-10">
+                <input type="text" readonly class="form-control-plaintext" id="UserChapStory" value="..."
+                       style="border: 1px solid gray;">
+            </div>
+        </div>
+<!--유튜브 링크-->
+        <div class="my-3 row">
+            <label for="UserYoutube" class="col-sm-2 col-form-label"
+                   >유튜브</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control-plaintext" id="UserYoutube" th:value="${user.youtubeUrl}"
+                       style="border: 1px solid gray;">
+            </div>
+        </div>
+<!--자기소개 수정-->
+        <div class="my-3 row">
+            <label for="UserIntro" class="col-sm-2 col-form-label"
+                   >자기소개</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control-plaintext" id="UserIntro" th:value="${user.introduce}"
+                       style="border: 1px solid gray;">
+            </div>
+        </div>
+<!--        <p class="form-floating">-->
+<!--            <input th:value="${user.nickname}" type="text" name="nickname" class="form-control" placeholder="??">-->
+<!--            <label>닉네임</label>-->
+<!--        </p>-->
+<!--        <p class="form-floating">-->
+<!--            <input th:value="${user.pw}" type="password" name="pw" class="form-control" placeholder="??">-->
+<!--            <label>패스워드</label>-->
+<!--        </p>-->
+
+
+<!--        <p class="form-floating">-->
+<!--            <input th:value="${user.email}" type="text" name="email" class="form-control" placeholder="??">-->
+
+<!--            <label>이메일</label>-->
+<!--        </p>-->
+<!--        <p class="form-floating">-->
+<!--            <input th:value="${user.birth}" type="date" name="birth" class="form-control" placeholder="??">-->
+<!--            <label>생일</label>-->
+<!--        </p>-->
+<!--        <p class="form-floating">-->
+<!--            <select name="gender" class="form-control">-->
+<!--                <option value="MALE" th:selected="${#strings.equals(user.gender,'MALE')}">남자</option>-->
+<!--                <option value="FEMALE" th:selected="${#strings.equals(user.gender,'FEMALE')}">여자</option>-->
+<!--            </select>-->
+<!--            <label>성별</label>-->
+<!--        </p>-->
+<!--        <p class="form-floating">-->
+<!--            <input th:value="${user.address}" type="text" name="address"  class="form-control" placeholder="??">-->
+<!--            <label>주소</label>-->
+<!--        </p>-->
+<!--        <p class="form-floating">-->
+<!--            <input th:value="${user.detailAddress}" type="text" name="detailAddress"  class="form-control" placeholder="??">-->
+<!--            <label>주소상세</label>-->
+<!--        </p>-->
         <p class="text-end">
             <a href="/user/dropout.do" class="btn btn-outline-danger">탈퇴</a>
             <button class="btn btn-outline-warning" type="reset">초기화</button>
