--- a/src/main/resources/templates/store/detail.html
+++ b/src/main/resources/templates/store/detail.html
@@ -63,68 +63,186 @@
     <a href="#review">리뷰</a>
     <a href="#map">지도</a>
   </div>
-  <div id="menu" class="store">
-    <div class="menuBoard row">
-      <!-- 여기서~~ -->
-      <div class="col-md-6">
-        <div class="d-flex align-items-center mb-5">
-          <img src="/public/img/store/cafe.jpg" style="width: 100px; height: 100px;">
-          <div>
-            <details>
-              <summary class="mb-0">메뉴이름1<span class="ms-5">11,000 원</span></summary>
-              <p>메뉴의 상세 설명 어짜구 저자구 블라 블라</p>
-            </details>
-          </div>
-        </div>
+
+  <div class="store">
+    <div class="chapDeal card">
+      <img src="" class="card-img-top" style="width:800px; height:300px;">
+      <div class="card-img-overlay p-0">
+        <div class="bookMark d-inline p-2">이벤트 제목</div>
       </div>
-      <!-- ~~여기까지 -->
-      <div class="col-md-6">
-        <div class="d-flex align-items-center mb-5">
-          <img src="/public/img/store/cafe.jpg" style="width: 100px; height: 100px;">
-          <div>
-            <details>
-              <summary class="mb-0">메뉴이름2<span class="ms-5">22,000 원</span></summary>
-              <p>메뉴의 상세 설명 어짜구 저자구 블라 블라</p>
-            </details>
-          </div>
+      <div class="card-body">
+        <h5 class="card-text me-2">가게 이름</h5>
+        <small>2023-04-02~2023-05-23</small>
+        <div class="d-flex justify-content-between mt-4">
+          <p class="mb-0">이벤트 조건</p>
+          <h4 class="reward mb-0">이벤트 보상</h4>
         </div>
       </div>
     </div>
   </div>
+  <div id="menu">
+    <h5 class="store mt-3">신메뉴</h5>
+    <div class="store newMenu mt-3">
+      <div class="col-md-2">
+        <img src="/public/img/store/cafe.jpg" style="width: 150px; height: 150px;">
+        <details>
+          <summary class="mb-0">메뉴이름1<span class="ms-5">11,000 원</span></summary>
+          <p>메뉴의 상세 설명 어짜구 저자구 블라 블라</p>
+        </details>
+      </div>
+      <div class="col-md-2">
+        <img src="/public/img/store/cafe.jpg" style="width: 150px; height: 150px;">
+        <details>
+          <summary class="mb-0">메뉴이름1<span class="ms-5">11,000 원</span></summary>
+          <p>메뉴의 상세 설명 어짜구 저자구 블라 블라</p>
+        </details>
+      </div>
+      <div class="col-md-2">
+        <img src="/public/img/store/cafe.jpg" style="width: 150px; height: 150px;">
+        <details>
+          <summary class="mb-0">메뉴이름1<span class="ms-5">11,000 원</span></summary>
+          <p>메뉴의 상세 설명 어짜구 저자구 블라 블라</p>
+        </details>
+      </div>
+    </div>
 
-  <div id="review" class="store">
-    <div class="reviews" style="width: 600px; height: 400px; border: #222 solid 1px;">
-      <!-- 상단 -->
-      <div class="review-container d-flex justify-content-between">
-        <!-- 상단 왼쪽 영역 -->
-        <div class="user-info d-flex">
-          <img src="user-profile.jpg" style="width: 50px; height: 50px; border-radius: 50%; border: #222 solid 1px">
-          <p class="user-name">유저닉네임</p>
-          <a class="btn btn-outline-dark btn-sm">팔로우</a>
-          <p class="review-count">리뷰개수:3</p>
-        </div>
-        <!-- 상단 오른쪽 영역 -->
-        <div class="review-info d-flex">
-          <p class="rating-value">★4.5</p>
-          <i class="bi bi-hand-thumbs-up"></i>
-          <i class="bi bi-hand-thumbs-down"></i>
-        </div>
+    <h5 class="store mt-3">대표메뉴</h5>
+    <div class="store popularMenu">
+      <div class="col-md-2">
+        <img src="/public/img/store/cafe.jpg" style="width: 150px; height: 150px;">
+        <details>
+          <summary class="mb-0">메뉴이름1<span class="ms-5">11,000 원</span></summary>
+          <p>메뉴의 상세 설명 어짜구 저자구 블라 블라</p>
+        </details>
       </div>
+      <div class="col-md-2">
+        <img src="/public/img/store/cafe.jpg" style="width: 150px; height: 150px;">
+        <details>
+          <summary class="mb-0">메뉴이름1<span class="ms-5">11,000 원</span></summary>
+          <p>메뉴의 상세 설명 어짜구 저자구 블라 블라</p>
+        </details>
+      </div>
+      <div class="col-md-2">
+        <img src="/public/img/store/cafe.jpg" style="width: 150px; height: 150px;">
+        <details>
+          <summary class="mb-0">메뉴이름1<span class="ms-5">11,000 원</span></summary>
+          <p>메뉴의 상세 설명 어짜구 저자구 블라 블라</p>
+        </details>
+      </div>
+    </div>
 
-      <!-- 중앙 영역 -->
-      <div class="review-content d-flex mt-3">
-        <img src="review-image.jpg" style="width: 150px; height: 150px;">
-        <div class="review-text">
-          <p class="review-description m-0" style="border: #222 solid 1px; width: 440px; height: 100px;">전체적인 리뷰를 작성하고 있습니다</p>
-          <p class="menu-comment" style="border: #222 solid 1px; width: 440px; height: 50px;">메뉴에 대한 한줄평</p>
+    <div class="store mt-3">
+      <div class="menuBoard row">
+        <!-- 여기서~~ -->
+        <div class="col-md-6">
+          <div class="d-flex align-items-center mb-5">
+            <img src="/public/img/store/cafe.jpg" style="width: 100px; height: 100px;">
+            <div>
+              <details>
+                <summary class="mb-0">메뉴이름1<span class="ms-5">11,000 원</span></summary>
+                <p>메뉴의 상세 설명 어짜구 저자구 블라 블라</p>
+              </details>
+            </div>
+          </div>
         </div>
+        <!-- ~~여기까지 -->
+        <div class="col-md-6">
+          <div class="d-flex align-items-center mb-5">
+            <img src="/public/img/store/cafe.jpg" style="width: 100px; height: 100px;">
+            <div>
+              <details>
+                <summary class="mb-0">메뉴이름2<span class="ms-5">22,000 원</span></summary>
+                <p>메뉴의 상세 설명 어짜구 저자구 블라 블라</p>
+              </details>
+            </div>
+          </div>
+        </div>
+
       </div>
-      <div class="review-comment d-flex">
-        <p class="review-description ms-5" style="border: #222 solid 1px; width: 540px; height: 100px;">저희 가게를 이용해주셔서 감사합니다</p>
-      </div>
-      <button class="btn btn-dark float-right">삭제</button>
     </div>
   </div>
+
+  <div id="review">
+    <div class="store">
+      <!-- 리뷰 목록 -->
+      <div class="reviews" style="width: 600px; height: 400px; border: #222 solid 1px;">
+        <!-- 상단 -->
+        <div class="review-container d-flex justify-content-between">
+          <!-- 상단 왼쪽 영역 -->
+          <div class="user-info d-flex">
+            <img src="user-profile.jpg" style="width: 50px; height: 50px; border-radius: 50%; border: #222 solid 1px">
+            <p class="user-name">유저닉네임</p>
+            <a class="btn btn-outline-dark" style="height: 30px; padding: 5px;">팔로우</a>
+            <p class="review-count">리뷰개수:3</p>
+          </div>
+          <!-- 상단 오른쪽 영역 -->
+          <div class="review-info">
+            <div class="d-flex">
+              <p class="rating-value">★4.5</p>
+              <i class="bi bi-hand-thumbs-up"></i>
+              <i class="bi bi-hand-thumbs-down"></i>
+            </div>
+            <a class="btn btn-outline-dark btn-sm">신고하기</a>
+            <!--          <button class="btn btn-dark float-right">삭제</button>-->
+          </div>
+        </div>
+
+        <!-- 중앙 영역 -->
+        <div class="review-content d-flex mt-3">
+          <img src="review-image.jpg" style="width: 150px; height: 150px;">
+          <div class="review-text">
+            <p class="review-description m-0" style="border: #222 solid 1px; width: 440px; height: 100px;">전체적인 리뷰를 작성하고 있습니다</p>
+            <p class="menu-comment" style="border: #222 solid 1px; width: 440px; height: 50px;">메뉴에 대한 한줄평</p>
+          </div>
+        </div>
+        <div class="review-comment d-flex">
+          <p class="review-description ms-5" style="border: #222 solid 1px; width: 540px; height: 100px;">저희 가게를 이용해주셔서 감사합니다</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="store">
+      <!-- 리뷰 목록 -->
+      <div class="reviews hide" style="width: 600px; height: 400px; border: #222 solid 1px;">
+        <!-- 상단 -->
+        <div class="review-container d-flex justify-content-between">
+          <!-- 상단 왼쪽 영역 -->
+          <div class="user-info d-flex">
+            <img src="user-profile.jpg" style="width: 50px; height: 50px; border-radius: 50%; border: #222 solid 1px">
+            <p class="user-name">유저닉네임</p>
+            <a class="btn btn-outline-dark" style="height: 30px; padding: 5px;">팔로우</a>
+            <p class="review-count">리뷰개수:3</p>
+          </div>
+          <!-- 상단 오른쪽 영역 -->
+          <div class="review-info">
+            <div class="d-flex">
+              <p class="rating-value">★4.5</p>
+              <i class="bi bi-hand-thumbs-up"></i>
+              <i class="bi bi-hand-thumbs-down"></i>
+            </div>
+            <a class="btn btn-outline-dark btn-sm">신고하기</a>
+            <!--          <button class="btn btn-dark float-right">삭제</button>-->
+          </div>
+        </div>
+
+        <!-- 중앙 영역 -->
+        <div class="review-content d-flex mt-3">
+          <img src="review-image.jpg" style="width: 150px; height: 150px;">
+          <div class="review-text">
+            <p class="review-description m-0" style="border: #222 solid 1px; width: 440px; height: 100px;">전체적인 리뷰를 작성하고 있습니다</p>
+            <p class="menu-comment" style="border: #222 solid 1px; width: 440px; height: 50px;">메뉴에 대한 한줄평</p>
+          </div>
+        </div>
+        <div class="review-comment d-flex">
+          <p class="review-description ms-5" style="border: #222 solid 1px; width: 540px; height: 100px;">저희 가게를 이용해주셔서 감사합니다</p>
+        </div>
+      </div>
+    </div>
+    <div class="store">
+      <button onclick="toggle()">더보기</button>
+    </div>
+  </div>
+
 
   <div id="map" class="store mt-4">
     <div style="width: 600px; height: 400px; border: #222 solid 1px;">
@@ -133,10 +251,25 @@
   </div>
 
 
+
 </div>
+
 </html>
 
+<script>
+  function toggle() {
+    const items = document.querySelectorAll('.reviews');
+    for(let i = 1; i < items.length; i++) {
+      items[i].classList.toggle('hide');
+    }
+  }
+
+</script>
 <style>
+  .hide {
+    display: none; /*리뷰 숨기기*/
+  }
+
   .image-container {
     display: flex;
     justify-content: center; /* 수평 중앙 정렬 */
@@ -166,7 +299,7 @@
   .store {
     display: flex;
     justify-content: center;
-    align-items: center;
+    /*align-items: center;*/
   }
 
   .storeName {
@@ -186,5 +319,30 @@
 
   .storeDetail{
     border: #222 solid 1px;
+  }
+
+
+  .card-img-overlay .d-inline {
+    position: relative;
+    top: 20px;
+    left: -5px;
+  }
+  .card-body {
+    background-color: #FFE3A9;
+    margin-bottom: 0px;
+  }
+  .card-text{
+    display: inline-block;
+    font-weight: bold;
+  }
+  .bookMark{
+    background-color: #FF5D5D;
+    border-radius: 0px 5px 5px 0px;
+    color:#fff;
+    font-weight:bold;
+  }
+  .reward{
+    color: #FF5D5D;
+    font-weight: bold;
   }
 </style>
